plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.26.0'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.openjfx:javafx-controls:21'
    implementation 'org.openjfx:javafx-fxml:21'
    implementation 'org.openjfx:javafx-graphics:21'
    implementation 'org.openjfx:javafx-web:21'
    testImplementation 'junit:junit:4.13.2'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

application {
    mainClass = 'com.example.gamecatalog.GameCatalogApp'
    mainModule = 'com.example.gamecatalog'
}

sourceSets {
    main {
        resources {
            srcDirs = ['src/main/resources']
        }
    }
}

javafx {
    version = "21"
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.web'] 
}

tasks.named('run') {
    doFirst {
        jvmArgs = [
            "--module-path", classpath.asPath, 
            "--add-modules", "javafx.controls,javafx.fxml,javafx.web"
        ]
    }
}

jlink {
    imageName = 'GameCatalog'

    launcher {
        name = 'GameCatalog'
        jvmArgs = ['--add-modules', 'javafx.controls,javafx.fxml,javafx.web']
    }

    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']

    jpackage {
        installerType = 'msi'
        installerName = 'GameCatalogInstaller'
        appVersion = project.version
        vendor = 'Your Name'
        installerOptions = [
            '--win-per-user-install',
            '--win-menu',
            '--win-shortcut',
            '--win-dir-chooser'
        ]
    }
}